import "google/protobuf/empty.proto";

syntax = "proto3";

package discovery;

service DiscoveryService {
    // Unary gRPC functions to register a service with the discovery service
    rpc RegisterService   (RegisterRequest)       returns (RegisterResponse);
    rpc UnregisterService (UnregisterRequest)     returns (UnregisterResponse);
    rpc GetFreePort       (PortRequest)           returns (PortResponse);
    rpc FindService       (ServiceRequest)        returns (ServiceResponse);

    // Serverside Stream gRPC function to list all services
    rpc ListServices      (google.protobuf.Empty) returns (stream ServiceResponse);
}

message RegisterRequest {
    string serviceName    = 1;
    string serviceAddress = 2;
}

message RegisterResponse {
    uint32 status    = 1;
    string serviceID = 2;
}

message UnregisterRequest {
    string serviceID = 1;
}

message UnregisterResponse { }

message ServiceRequest {
    string serviceNameOrID = 1;
}

message ServiceResponse {
    string serviceID      = 1;
    string serviceName    = 2;
    string serviceAddress = 3;
}

message PortRequest {
    uint32 targetPort = 1;
}

message PortResponse {
    uint32 freePort = 1;
}